# local_llm_wrapper

./: .gitignore  MANIFEST.in  README.md  llm_chat.py  llm_generate.py  llm_xml_demo.py  pip_requirements.txt  pyproject.toml
docs/: API_IMPLEMENTATION_GUIDE.md  CHANGELOG.md  CODE_ARCHITECTURE.md  FILE_STRUCTURE.md  LLM_WRAPPER_IDEAS.md  OPENAI_WRAPPER_NOTES.md  PUBLIC_API_PLAN.md
local_llm_wrapper/: errors.py  llm.py  llm_client.py  llm_engine.py  llm_parsers.py  llm_utils.py
local_llm_wrapper/transports/: __init__.py  apple.py  base.py  ollama.py
tests/: conftest.py  test_llm_client.py  test_llm_engine.py  test_llm_parsers.py  test_llm_prompts.py  test_llm_utils.py
