[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "local-llm-wrapper"
version = "0.1"
description = "Local LLM wrapper (import local_llm_wrapper) with a stable text-in text-out API."
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.12"

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
where = ["."]
include = ["local_llm_wrapper*"]
